--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@
 variables:
   VIS_CI_APP_NAME: 'team8'
   VIS_CI_DEPLOYMENT_SUBDOMAIN: 'team8'
+  VIS_CI_ENABLE_POSTGRES: 'true'
 
 stages:
   - build
