--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 *.swp
+webserver/__pycache__/SqlWrapper.cpython-36.pyc
+webserver/__pycache__/server.cpython-36.pyc
+webserver/__pycache__/config.cpython-36.pyc
