--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.swp
-webserver/__pycache__/SqlWrapper.cpython-36.pyc
-webserver/__pycache__/server.cpython-36.pyc
-webserver/__pycache__/config.cpython-36.pyc
+webserver/__pycache__/
+webserver/people_pb2.py
+webserver/people_pb2_grpc.py
 .vscode
